force-app/main/default/objects/Micro_Site__c.object
<CustomObject>
    <fields>
        <fullName>Attachment_Id__c</fullName>
        <description>This field captures the id of any attachment created in its parent record</description>
        <label>Attachment Id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Barcode_Sub_Type__c</fullName>
        <label>Barcode Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Barcode_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>128A</fullName>
                </value>
                <value>
                    <fullName>128B</fullName>
                </value>
                <value>
                    <fullName>128C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Barcode_Type__c</fullName>
        <label>Barcode Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Code128</fullName>
                </value>
                <value>
                    <fullName>Code39</fullName>
                </value>
                <value>
                    <fullName>ean13</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Biography__c</fullName>
        <label>Biography</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <description>Used to filter records on the website staff directory</description>
        <formula>TEXT(Staff_Member__r.Campus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <label>Degree</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deleted_Attachment_Id__c</fullName>
        <description>Captures the att id of any deleted attachment in its parent record</description>
        <label>Deleted Attachment Id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>TEXT(Staff_Member__r.School_Department__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailFormula__c</fullName>
        <formula>Staff_Member__r.Email_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Staff Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Zip_Postal_Code_Range__c</fullName>
        <description>When an individual Zip/Postal Code is searched via the public Site, Micro Site records that fall between the Start Zip/Postal Code and the End Zip/Postal Code will be displayed.</description>
        <inlineHelpText>When an individual Zip/Postal Code is searched via the public Site, Micro Site records that fall between the Start Zip/Postal Code and the End Zip/Postal Code will be displayed.</inlineHelpText>
        <label>End Zip/Postal Code Range</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>English_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points at the parent (english) version of this record</description>
        <label>English Parent</label>
        <referenceTo>Micro_Site__c</referenceTo>
        <relationshipLabel>Translations</relationshipLabel>
        <relationshipName>english_parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Indicative_Owner_ID__c</fullName>
        <description>A temporary field used to define the correct owner of a staff directory record i.e. the staff member to which the record refers. Used for updating the owner field easily in lieu of a trigger being created to do the same.</description>
        <formula>Staff_Member__r.PersonContact.User__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicative Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Language switch for website translation management.</description>
        <inlineHelpText>Select the language of your record.</inlineHelpText>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EN</fullName>
                    <default>true</default>
                    <label>EN</label>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                </value>
                <value>
                    <fullName>RU</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>UZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link_to_File__c</fullName>
        <formula>IMAGE(&quot;https://c.ap4.content.force.com/servlet/servlet.ImageServer?id=&quot;&amp; Photo_ID__c&amp;&quot; &amp;oid=00D6F000001cXAR&quot;,  Name__c , 226, 150)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to File</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Override__c</fullName>
        <inlineHelpText>Leave blank to use &quot;Staff Member&quot; name shown above</inlineHelpText>
        <label>Name Override</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>IF(Name_Override__c &lt;&gt; &quot;&quot;, Name_Override__c, TEXT(Staff_Member__r.Salutation) &amp;&quot; &quot;&amp; Staff_Member__r.FirstName &amp;&quot; &quot;&amp; Staff_Member__r.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <formula>TEXT(Staff_Member__r.Nationality__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country of Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Qualifications__c</fullName>
        <label>Other Qualifications</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Path_Alias__c</fullName>
        <inlineHelpText>OPTIONAL. Paste here the ending url path of the node on the old school website. Ex: from www.oldsite.com/curriculum/overview.asp paste &quot;curriculum/1styear/overview&quot;. No initial &quot;/&quot; no &quot;.asp&quot; or similar.</inlineHelpText>
        <label>Path Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Contact_ID__c</fullName>
        <description>Required for transition from the old staff directory (microsite object) to the new staff directory (user object) so that records can be matched using this ID</description>
        <formula>CASESAFEID(Staff_Member__r.PersonContact.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Information__c</fullName>
        <label>Personal Interests</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Photo_ID__c</fullName>
        <label>Photo ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Id_URL__c</fullName>
        <formula>IF(Photo_ID__c != null,&quot;/servlet/servlet.FileDownload?file=&quot; &amp; Photo_ID__c &amp; &quot;&amp;oid=&quot; &amp; $Organization.Id ,&quot;/servlet/servlet.FileDownload?file=015D0000001RZWe&amp;oid=&quot; &amp; $Organization.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Photo Id URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <formula>IF(Photo_ID__c != null,IMAGE( &quot;/servlet/servlet.FileDownload?file=&quot; &amp; Photo_ID__c &amp; &quot;&amp;oid=&quot; &amp; $Organization.Id, &quot;No Photo Available&quot;),IMAGE( &quot;/servlet/servlet.FileDownload?file=015D0000001RZWe&amp;oid=&quot; &amp; $Organization.Id, &quot;No Photo Available&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Photo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Override__c</fullName>
        <label>Position Override</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <formula>IF( Position_Override__c =&quot;&quot;,Staff_Member__r.Position_Staff_Directory__c, Position_Override__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_to_FB__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field if you want a teaser of the node to appear on the school fb page. Not valid for group website posts.</inlineHelpText>
        <label>Post to FB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_Status__c</fullName>
        <description>Only the Status Value of &quot;Active&quot; will publish the Micro Site details to the public web.</description>
        <inlineHelpText>Only the Status Value of &quot;Active&quot; will publish the Micro Site details to the public web.</inlineHelpText>
        <label>Publish_Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Publish_on_School_Site__c</fullName>
        <formula>IF(Staff_Member__r.Status__c = &apos;Employed&apos;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Publish on School Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_List__c</fullName>
        <description>A middle step from the school override field to the school list copy field.</description>
        <formula>IF(OR(ISNULL(School_Override_Field__c), INCLUDES( School_Override_Field__c, &quot;No override&quot;)), TEXT( Owner:User.School__c ), IF(INCLUDES ( School_Override_Field__c , &quot;Guangzhou&quot; ), &quot;The British School of Guangzhou;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Nanjing&quot; ), &quot;The British School of Nanjing;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Marbella&quot; ), &quot;The British School of Marbella;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Navarra&quot; ), &quot;The British School of Navarra;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Tashkent&quot; ), &quot;The British School of Tashkent;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Brazil&quot; ), &quot;The British College of Brazil;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Kuala Lumpur&quot; ), &quot;The British International School of Kuala Lumpur;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Moscow&quot; ), &quot;The International School of Moscow;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Manila&quot; ), &quot;The King&apos;s School Manila;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Beijing&quot; ), &quot;King&apos;s College Beijing;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Group Site&quot; ), &quot;The British Schools Foundation;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;New York&quot; ), &quot;The New York International School;&quot;,null ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field to set the values from the picklist in a text array. The Schools List Copy field will copy this field. Should be hidden.</inlineHelpText>
        <label>School List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Override_Field__c</fullName>
        <inlineHelpText>Publish this record on the websites of the selected schools.</inlineHelpText>
        <label>School Override Field</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Override</fullName>
                    <default>true</default>
                    <label>No Override</label>
                </value>
                <value>
                    <fullName>Guangzhou</fullName>
                </value>
                <value>
                    <fullName>Nanjing</fullName>
                </value>
                <value>
                    <fullName>Marbella</fullName>
                </value>
                <value>
                    <fullName>Navarra</fullName>
                </value>
                <value>
                    <fullName>Tashkent</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Kuala Lumpur</fullName>
                </value>
                <value>
                    <fullName>Moscow</fullName>
                </value>
                <value>
                    <fullName>Manila</fullName>
                </value>
                <value>
                    <fullName>Beijing</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>Group Site</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <formula>TEXT(Staff_Member__r.Owner.School__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schools_List_Copy__c</fullName>
        <label>Schools List Copy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Staff_Member__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Staff Member</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Staff Directory</relationshipLabel>
        <relationshipName>Micro_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Zip_Postal_Code_Range__c</fullName>
        <description>When an individual Zip/Postal Code is searched via the public Site, Micro Site records that fall between the Start Zip/Postal Code and the End Zip/Postal Code will be displayed.</description>
        <inlineHelpText>When an individual Zip/Postal Code is searched via the public Site, Micro Site records that fall between the Start Zip/Postal Code and the End Zip/Postal Code will be displayed.</inlineHelpText>
        <label>Positioning</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>Staff_Member__r.Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Extension__c</fullName>
        <description>This Extension is pulled from the User record</description>
        <formula>User__r.Extension</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This Extension is pulled from the User record</inlineHelpText>
        <label>Extension</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Phone__c</fullName>
        <description>This Phone number is pulled from the User record</description>
        <formula>Staff_Member__r.Email_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This Phone number is pulled from the User record</inlineHelpText>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Title__c</fullName>
        <description>This Title is pulled from the User record</description>
        <formula>User__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This Title is pulled from the User record</inlineHelpText>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Tying a Micro Site to a user allows each user to modify their Micro Site through the default application or though the portal.</description>
        <inlineHelpText>Tying a Micro Site to a user allows each user to modify their Micro Site through the default application or though the portal.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Micro_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Web_id__c</fullName>
        <description>We use this field to export the record id of the record to the school / group websites. Can have several uses on the sites.</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Web id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Years_of_Experience__c</fullName>
        <label>Years of Experience</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>Micro Site</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>School__c</columns>
        <columns>Name__c</columns>
        <columns>Staff_Member__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Moscow</fullName>
        <columns>NAME</columns>
        <columns>School__c</columns>
        <columns>Name__c</columns>
        <columns>Staff_Member__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>School__c</field>
            <operation>contains</operation>
            <value>Moscow</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Employed</value>
        </filters>
        <label>All Moscow</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Positioning</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Micro Sites</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Disallow_Teacher_Change_To_Positioning</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(Name), $Profile.Name = &quot;Teacher&quot;)</errorConditionFormula>
        <errorMessage>You cannot change the &apos;Positioning&apos; value of this record. Please click &apos;Cancel&apos; or revert the value in the &apos;Positioning&apos; field to continue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Disallow_Teacher_Creating_Other_Staffs</fullName>
        <active>true</active>
        <description>Stops a teacher creating a staff directory record for someone that is not themselves</description>
        <errorConditionFormula>AND($Profile.Name = &quot;Teacher&quot;, Staff_Member__r.PersonContact.User__r.Id &lt;&gt; $User.Id)</errorConditionFormula>
        <errorMessage>You cannot create or edit a staff directory record for another staff member</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>first_record_in_english</fullName>
        <active>true</active>
        <description>Avoid a record with empty English_Parent__c and other language than english</description>
        <errorConditionFormula>AND((Publish_on_School_Site__c = TRUE), ISBLANK(English_Parent__c), OR((ISBLANK(TEXT(Language__c))), NOT(ISPICKVAL(Language__c, &quot;EN&quot;))))</errorConditionFormula>
        <errorDisplayField>Language__c</errorDisplayField>
        <errorMessage>If you want to publish on a School Website in a language different than English (EN) you must first create it in English and then translate it.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>first_record_in_english_2</fullName>
        <active>true</active>
        <description>Avoid user create a first record in english (EN) with a value in English_Parent__C field.</description>
        <errorConditionFormula>NOT(ISBLANK(English_Parent__c)) &amp;&amp; ISPICKVAL(Language__c, &quot;EN&quot;)</errorConditionFormula>
        <errorDisplayField>Language__c</errorDisplayField>
        <errorMessage>You are trying to save a translation of a record in english so the language must be other than EN (English).</errorMessage>
    </validationRules>
</CustomObject>